finished writing parser